--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pavan's Portfolio",
+  "name": "Naga Pavan Bhuma's Portfolio",
+  "description": "A portfolio showcasing the work and projects of Naga Pavan Bhuma.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://yt3.ggpht.com/ytc/AIdro_mCZUi9xwC0E3fpFhFkHJ82ctJ2jtr_F5uQG11rlF8Kda4=s600-c-k-c0x00ffffff-no-rj-rp-mo",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://yt3.ggpht.com/ytc/AIdro_mCZUi9xwC0E3fpFhFkHJ82ctJ2jtr_F5uQG11rlF8Kda4=s600-c-k-c0x00ffffff-no-rj-rp-mo",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://yt3.ggpht.com/ytc/AIdro_mCZUi9xwC0E3fpFhFkHJ82ctJ2jtr_F5uQG11rlF8Kda4=s600-c-k-c0x00ffffff-no-rj-rp-mo",
       "type": "image/png",
       "sizes": "512x512"
     }
